Button alignment issue

--- a/components/_cms-page-module.scss
+++ b/components/_cms-page-module.scss
@@ -106,8 +106,10 @@ $cms-page-module-padding-left-right: 15px !default;
 	// 	}
 	// }
 
-	&.type-see-also {
-		#external-links {
+	&.type-see-also,
+	&.type-external-links {
+		#external-links,
+		.external-links {
 			margin-bottom: 0;
 
 			li:last-child {
